compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_float_annotation.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/float-annotation.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported type annotation
   ╭─[tests/fixtures/diagnostics/types/float-annotation.ml:2:14]
 1 │ fn main() {
 2 │   let value: float = 1.0;
   ·              ──┬──
   ·                ╰── `float` is not a primitive Riot ML type
 3 │   dbg(value)
   ╰────
  help: use an explicitly sized floating-point type, for example `f32` or
        `f64`
